# etl-workshop-3

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: world_happiness_report.csv
docs/guides/: azure_postgres.md  drive_api.md  gcp_postgres.md
kafka/: consumer.py  producer.py
model/: gb_model.pkl  rf_model.pkl
notebooks/: 01-EDA.ipynb  01-EDA_and_training.ipynb  02-model_training-metrics.ipynb  02-model_training.ipynb  03-metrics.ipynb
src/database/: db_operations.py
src/extract/: whr_extraction.py
src/load/: whr_loading.py
src/services/: kafka.py
src/transform/: whr_preprocessing.py  whr_transformation.py
utils/: dataframe_utils.py  df_analytics_utils.py  preprocessing_utils.py  transformation_utils.py
