[tool.poetry]
name = "etl-workshop-3"
version = "0.1.0"
description = "Workshop oriented to Data Streaming and Machine Learning processes"
authors = ["Martín García <martin.garcia@uao.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
country-converter = "^1.2"
plotly = "^5.24.1"
nbformat = ">=4.2.0"
seaborn = "^0.13.2"
sqlalchemy = "^2.0.36"
sqlalchemy-utils = "^0.41.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
